# table-structure-recovery

./: CMakeLists.txt  README.md
examples/: example.cpp
include/: table_restoration.h
src/: table_restoration.cpp
